tests/fixtures/BinaryOperationLiteralTests/errors/nir_multiplication.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(Nir * Nir)

